<resources>
    <string name="app_name">GithubAppUserSubmission2</string>
    <string name="onboard">Welcome to Github, let is have an adventure and upload your work in public</string>
    <string name="bu">Let Get Started</string>
    <string name="splash_screen">GitHubUsers</string>
    <string name="mode">Mode</string>
    <string name="toolbar1">Github</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="followers">Followers</string>
    <string name="location">Location</string>
    <string name="url">Url</string>
    <string name="company">Company</string>
    <string name="repository">Repository</string>
    <string name="following">Following</string>
    <string name="search_data">Search User</string>
    <string name="id">ID</string>
    <string name="description">yeah! click me! I have a description</string>
    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="data_user">Data User</string>
    <string name="data_empty">Data Empty</string>
    <string name="setting">Setting</string>
    <string name="theme_mode">Theme Mode</string>
    <string name="info_aplikasi">Info Aplikasi</string>
    <string name="version_0_1">Version 0.1</string>
    <string name="info_fragment">Aplikasi Github Clone ini merupakan gabungan submission 2 dan 3 dari hasil pembelajaran dari Fundamental Android di dicoding</string>
    <string name="favorite_User">Favorite User</string>
    <string name="pengaturan_aplikasi">Pengaturan Aplikasi</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="image_button">Yeah! anda mengklik aksi button</string>

</resources>