<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.user.DetailUserActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        style="@style/card"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/username1"
            style="@style/TextTittle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/username" />

        <ImageButton
            android:id="@+id/btnFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_favorit_aktif"
            android:padding="20sp"
            android:contentDescription="@string/image_button"
            tools:ignore="RtlHardcoded" />


    </androidx.cardview.widget.CardView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photo"
        android:layout_width="83dp"
        android:layout_height="92dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/card"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@+id/card"
        tools:src="@tools:sample/avatars">

    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/name"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/photo"
        app:layout_constraintBottom_toBottomOf="@+id/photo"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toBottomOf="@+id/card"
        app:layout_constraintVertical_bias="0.329"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/company"
        style="@style/TextContent.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/photo"
        app:layout_constraintBottom_toBottomOf="@+id/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/company" />


    <TextView
        android:id="@+id/location"
        style="@style/TextContent.Small.Grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/photo"
        app:layout_constraintBottom_toBottomOf="@+id/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/photo"
        app:layout_constraintTop_toBottomOf="@+id/company"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/location" />

    <TextView
        android:id="@+id/repository"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="36dp"
        android:layout_toEndOf="@id/photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <TextView
        android:id="@+id/following"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="52dp"
        android:layout_toEndOf="@id/photo"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@+id/card" />

    <TextView
        android:id="@+id/followers"
        style="@style/TextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="80dp"
        android:layout_toEndOf="@id/photo"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/following"
        app:layout_constraintStart_toEndOf="@+id/repository"
        app:layout_constraintTop_toBottomOf="@+id/card" />


    <TextView
        android:id="@+id/textView3"
        style="@style/TextContent.Small"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/photo"
        android:text="@string/following"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/following"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/following"
        app:layout_constraintTop_toBottomOf="@+id/following"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextContent.Small"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/photo"
        android:text="@string/followers"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/followers"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/followers"
        app:layout_constraintTop_toBottomOf="@+id/followers"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextContent.Small"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/photo"
        android:text="@string/repository"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/repository"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="@+id/repository"
        app:layout_constraintTop_toBottomOf="@+id/repository"
        app:layout_constraintVertical_bias="0.054" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/tab"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tabs"
        app:layout_constraintStart_toStartOf="@+id/tabs"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

    <ProgressBar
        android:id="@+id/bar_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="27dp"
        android:textOn=""
        android:textOff=""
        android:background="@drawable/toggle_favorite_user"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintBottom_toTopOf="@+id/following"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/card"
        app:layout_constraintVertical_bias="0.056" />

</androidx.constraintlayout.widget.ConstraintLayout>